--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+	<script src="components/lib/slimpickin/dist/slimpickin.min.js"></script>
 	<script src="components/script.js"></script>
 	<script src="//localhost:35729/livereload.js"></script>
 </body>
