--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 
+	<div class="landscape">
+		<div class="sky" data-0="top:0px"data-1080="top:0px"></div>
+		<div class="background" data-0="top:300px"data-1080="top:100px"></div>
+		<div class="midground" data-0="top:500px"data-1080="top:150px"></div>
+		<div class="foreground" data-0="top:750px"data-1080="top:0px"></div>
+	</div>
+
+	<div class="content">
+		
+	</div>
+
+	<script src="components/lib/skrollr.min.js"></script>
 	<script src="components/lib/slimpickin/dist/slimpickin.min.js"></script>
 	<script src="components/script.js"></script>
 	<script src="//localhost:35729/livereload.js"></script>
